[gd_scene load_steps=8 format=3 uid="uid://b1vkc3c3dg3av"]

<<<<<<< Updated upstream
[ext_resource type="Texture2D" uid="uid://cqwuy4cxhj0gi" path="res://systems/inventory/items/texture_upgradium.png" id="1_agh3l"]
=======
[ext_resource type="Texture2D" path="res://systems/inventory/items/texture_upgradium.png" id="1_agh3l"]
>>>>>>> Stashed changes
[ext_resource type="Script" uid="uid://d2j2sm4grpsdq" path="res://systems/music_sfx/files/sfx/tile/block_break.gd" id="1_givdv"]
[ext_resource type="AudioStream" uid="uid://dsbawt5jv1up" path="res://systems/music_sfx/files/sfx/tile/block_break.wav" id="2_agh3l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mapgd"]
animations = [{
"frames": [],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_agh3l"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 3), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mhxuf"]
curve = SubResource("Curve_agh3l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mhxuf"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(32, 32, 1)
angle_min = -720.0
angle_max = 750.3
gravity = Vector3(0, 98, 0)
linear_accel_min = -40.23
linear_accel_max = 22.99
radial_accel_min = -42.53
radial_accel_max = 2.3
scale_min = 0.0
scale_max = 0.2
scale_over_velocity_max = 20.0
scale_over_velocity_curve = SubResource("CurveTexture_mhxuf")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[node name="BreakAnimation" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_mapgd")
autoplay = "default"
script = ExtResource("1_givdv")

[node name="BlockBreak" type="GPUParticles2D" parent="."]
self_modulate = Color(0.121569, 0.156863, 0.345098, 1)
emitting = false
amount = 16
texture = ExtResource("1_agh3l")
one_shot = true
explosiveness = 1.0
randomness = 0.45
process_material = SubResource("ParticleProcessMaterial_mhxuf")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_agh3l")
volume_db = 2.0
bus = &"Block Break"

[node name="AudioDelay" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AudioDelay" to="." method="_on_audio_delay_timeout"]
